♻️ Refactor: #-- 테스트 코드 구조 변경 1차